--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
     /* z-index: 1; */
     /* background-color: rgb(230, 230, 26); */
     /* filter: brightness(50%); */
-    background: url(/aA4237.0.jpg) fixed;
+    background: url(aA4237.0.jpg) fixed;
     background-size: cover;
     background-repeat: no-repeat;
 }
